# aucome

./: CHANGELOG.md  Dockerfile  README.md  README.rst  aucome.py  compare.py  mp_pantograph_2.py  ptools  ptools_installer  pyproject.toml  release.txt  requirements.txt  setup.cfg  setup.py  terms.md  update_task.txt  update_version.py
aucome/: __init__.py  __main__.py  analysis.py  check.py  compare.py  draft.py  merge.py  orthology.py  prot2genome.py  reconstruction.py  spontaneous.py  structural.py  utils.py  workflow.py
recipes/: Dockerfile  Singularity
template/: config.txt  full_log.txt  log.txt
test/: test_aucome.py  test_compare.py
test/data/: Auxenochlorella_protothecoides.gbk  commands.sh
test/test/: config.txt
test/test/studied_organisms/fatty_acid_beta_oxydation_I_1/: fatty_acid_beta_oxydation_I_1.gbk
test/test/studied_organisms/fatty_acid_beta_oxydation_I_2/: fatty_acid_beta_oxydation_I_2.gbk
